--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h2><i class="fas fa-graduation-cap"></i> EDUCATION</h2>
           <p><strong>Bachelor’s Degree in Business Information Technology</strong></p>
           <p>Kirinyaga University</p>
-          <p>Graduating in 2025</p>
+          <p>Graduating in 2025</p> <br>
           <p><strong>High School</strong></p>
           <p>Enaiposha Girls High School</p>
         </div>
@@ -71,7 +71,7 @@
             <p>Collaborated with a diverse team to build web applications. Gained experience in teamwork and learned the importance of effective communication across different regions.</p>
           </div>
           <div class="experience-item">
-            <p><strong>Software Developer</strong> - Teach2Give (Certified in 2023)</p>
+            <p><strong>Software Developer</strong> - Teach2Give (may 2024 - july 2024)</p>
             <p>Awarded certification after three months of intensive training in technical and soft skills.</p>
           </div>
           <div class="experience-item">
