--- a/index.html
+++ b/index.html
@@ -14,13 +14,26 @@
       <p class="subtitle">FULL-STACK DEVELOPER</p>
     </header>
 
-    <section class="content">
-      <div class="left-panel">
+    <div class="main-content">
+      <aside class="sidebar">
+        <div class="contact">
+          <h2><i class="fas fa-address-book"></i> CONTACT</h2>
+          <p><i class="fas fa-phone-alt"></i> +254 705-912-632</p>
+          <p><i class="fas fa-envelope"></i> christinenyambwari@gmail.com</p>
+          <p><i class="fas fa-map-marker-alt"></i> Nakuru, Kenya</p>
+          <p><i class="fab fa-linkedin"></i> 
+            <a href="https://www.linkedin.com/in/christine-nyambwari-8b465b2a9" target="_blank">Christine Nyambwari</a>
+          </p>
+          <p><i class="fab fa-github"></i> 
+            <a href="https://github.com/stine-ri" target="_blank">stine-ri</a>
+          </p>
+        </div>
+
         <div class="skills">
           <h2><i class="fas fa-code"></i> SKILLS</h2>
           <ul>
             <li>React.js & Node.js</li>
-            <li>Redux.js </li>
+            <li>Redux.js</li>
             <li>TypeScript & JavaScript</li>
             <li>HTML & CSS</li>
             <li>Tailwind CSS & Daisy UI</li>
@@ -37,46 +50,31 @@
           <h2><i class="fas fa-graduation-cap"></i> EDUCATION</h2>
           <p><strong>Bachelor’s Degree in Business Information Technology</strong></p>
           <p>Kirinyaga University</p>
-          <p>Graduating in 2025</p> <br>
+          <p>Graduating in 2025</p>
           <p><strong>High School</strong></p>
           <p>Enaiposha Girls High School</p>
         </div>
+      </aside>
 
-        <div class="contact">
-          <h2><i class="fas fa-address-book"></i> CONTACT</h2>
-          <p><i class="fas fa-phone-alt"></i> +254 705-912-632</p>
-          <p><i class="fas fa-envelope"></i> christinenyambwari@gmail.com</p>
-          <p><i class="fas fa-map-marker-alt"></i> Nakuru, Kenya</p>
-          <p>
-            <i class="fab fa-linkedin"></i> 
-            <a href="https://www.linkedin.com/in/christine-nyambwari-8b465b2a9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="linkedin-link">Christine Nyambwari</a>
-          </p>
-          <p>
-            <i class="fab fa-github"></i> 
-            <a href="https://github.com/stine-ri" target="_blank" class="github-link">stine-ri</a>
-          </p>
-        </div>
-      </div>
-
-      <div class="right-panel">
+      <section class="main-panel">
         <div class="profile">
           <h2><i class="fas fa-user"></i> PROFILE</h2>
-          <p>I am a certified full-stack developer with expertise in both frontend and backend technologies. My skills span across frameworks and languages, including React.js, Node.js, TypeScript, JavaScript, HTML, CSS, Tailwind CSS, Daisy UI, Hono.js, Drizzle ORM, and PostgreSQL. I hold a Bachelor’s degree in Business Information Technology from Kirinyaga University and am passionate about creating scalable, user-centric applications.</p>
+          <p>I am a certified full-stack developer with expertise in both frontend and backend technologies. My skills span across frameworks and languages, including React.js, Node.js, TypeScript, JavaScript, HTML, CSS, Tailwind CSS, Daisy UI, Hono.js, Drizzle ORM, and PostgreSQL.</p>
         </div>
 
         <div class="experience">
           <h2><i class="fas fa-briefcase"></i> EXPERIENCE</h2>
           <div class="experience-item">
             <p><strong>Web Developer Intern</strong> - Zidio Development (Sep 2024 - Nov 2024)</p>
-            <p>Collaborated with a diverse team to build web applications. Gained experience in teamwork and learned the importance of effective communication across different regions.</p>
+            <p>Collaborated with a diverse team to build web applications and learned the importance of effective communication across regions.</p>
           </div>
           <div class="experience-item">
-            <p><strong>Software Developer</strong> - Teach2Give (may 2024 - july 2024)</p>
+            <p><strong>Software Developer</strong> - Teach2Give (May 2024 - July 2024)</p>
             <p>Awarded certification after three months of intensive training in technical and soft skills.</p>
           </div>
           <div class="experience-item">
             <p><strong>Course Representative</strong> - Kirinyaga University</p>
-            <p>Recognized as a leader and certified for managing Business Information Technology course group.</p>
+            <p>Certified for managing the Business Information Technology course group.</p>
           </div>
         </div>
 
@@ -88,15 +86,20 @@
           </div>
           <div class="project-item">
             <p><strong>Health Chatbot with GPT-3 Integration</strong></p>
-            <p>Built a comprehensive chatbot for mental and physical wellness, using GPT-3 for intelligent responses.</p>
-          </div>
-          <div class="project-item">
-            <p><strong>Maternal Health Monitoring System</strong></p>
-            <p>Participated in a Kenya Red Cross competition, creating a monitoring system focused on maternal health.</p>
+            <p>Built a chatbot for mental and physical wellness, using GPT-3 for intelligent responses.</p>
           </div>
         </div>
-      </div>
-    </section>
+
+        <div class="leadership">
+          <h2><i class="fas fa-users"></i> LEADERSHIP</h2>
+          <div class="leadership-item">
+            <p><strong>Course Representative</strong> - Kirinyaga University</p>
+            <p>Successfully led the Business Information Technology course group by providing mentorship, resolving conflicts, and fostering teamwork.</p>
+            <p>Awarded for strong leadership, problem-solving abilities, and dedication to academic excellence.</p>
+          </div>
+        </div>
+      </section>
+    </div>
   </div>
 </body>
 </html>
